<resources>
    <string name="app_name">TogetherPet</string>
    <string name="title">Together PET</string>
    <string name="bottom_home">홈</string>
    <string name="bottom_walkingPet">산책하기</string>
    <string name="bottom_searchingPet">같이찾기</string>
    <string name="bottom_diary">반려일기</string>
    <string name="bottom_community">커뮤니티</string>
    <string name="together_text">"<b>"투게더 펫"</b>"에서는\n반려동물 정보를 공유해\n위급시 반려동물을 함께 찾을 수 있어요</string>
    <string name="sos">SOS</string>
    <string name="sos_context">지금 도움이 필요해요!</string>
    <string name="sos_missing_date">D+%dH</string>
    <string name="home_popular_post_title">우리 동네 인기 게시물</string>
    <string name="notice_ready">현재 준비 중인 서비스 입니다</string>
    <string name="home_walking_title">오늘 %s의 산책 현황</string>
    <string name="home_total_count_title">총 횟수</string>
    <string name="home_total_distance_title">총 거리</string>
    <string name="home_total_time_title">총 시간</string>
    <string name="home_avg_count">/평균 %s회</string>
    <string name="home_avg_distance">/평균 %skm</string>
    <string name="home_avg_time">/평균 %sm</string>
    <string name="searching_myPet_missing_btn">내 반려동물 실종등록</string>
    <string name="searching_missing_info_btn">실종 정보</string>
    <string name="searching_report_info_btn">제보 정보</string>
    <string name="searching_report_btn">목격 제보</string>
    <string name="missing_bottom_species">종</string>
    <string name="missing_bottom_age">나이</string>
    <string name="missing_bottom_missingPlace">실종 장소</string>
    <string name="missing_bottom_addInfo">특이 사항</string>
    <string name="missing_bottom_report_btn">제보 하기</string>
    <string name="report_info_locationNTime">위치 및 시간</string>
    <string name="report_info_info">정보</string>
    <string name="report_info_nickName">제보자</string>
    <string name="registering_image">이미지 등록하기</string>
    <string name="report_color">반려동물 색상</string>
    <string name="report_gender">반려동물 성별</string>
    <string name="report_species">반려동물 종</string>
    <string name="report_time">반려동물 목격 시간</string>
    <string name="report_missing_time">반려동물 실종 시간</string>
    <string name="report_location">반려동물 목격 장소</string>
    <string name="report_missing_location">반려동물 실종 장소</string>
    <string name="report_info">반려동물을 목격했을 때 상황을 적어주세요</string>
    <string name="report_missing_info">반려동물을 실종했을 때 상황을 적어주세요</string>
    <string name="report_info_detail">(자세히 적어주시면 큰 도움이 됩니다)</string>
    <string name="report_suspected_title">실종 의심 동물 제보</string>
    <string name="report_myPetMissing_title">반려동물 실종 정보 등록</string>
    <string name="button_confirm">확인</string>
    <string name="my_pet_report_success"> 실종 정보 등록을 완료했습니다.\n목격 제보가 등록되면 확인하실 수 있습니다.</string>
    <string name="fail"> 오류가 발생했습니다.\n다시 한번 시도해 주세요!</string>
    <string name="report_success"> 제보 완료!\n함께 찾기에 동참해 주셔서\n진심으로 감사합니다!</string>
</resources>