<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/missing_bottom_petName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TogetherPetTextHeadingLarge"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/missing_bottom_petImg"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/missing_bottom_petName" />

    <TextView
        android:id="@+id/missing_bottom_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/missing_bottom_species"
        android:textAppearance="@style/TogetherPetTextSmall"
        app:layout_constraintStart_toStartOf="@id/missing_bottom_petName"
        app:layout_constraintTop_toBottomOf="@id/missing_bottom_petName" />

    <TextView
        android:id="@+id/missing_bottom_species_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="208dp"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:textAppearance="@style/TogetherPetTextSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/missing_bottom_petName" />

    <TextView
        android:id="@+id/missing_bottom_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:text="@string/missing_bottom_age"
        android:textAppearance="@style/TogetherPetTextSmall"
        app:layout_constraintStart_toStartOf="@id/missing_bottom_species"
        app:layout_constraintTop_toBottomOf="@id/missing_bottom_species" />

    <TextView
        android:id="@+id/missing_bottom_age_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="208dp"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:textAppearance="@style/TogetherPetTextSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/missing_bottom_species" />

    <TextView
        android:id="@+id/missing_bottom_missingPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/missing_bottom_missingPlace"
        android:textAppearance="@style/TogetherPetTextSmall"
        app:layout_constraintStart_toStartOf="@id/missing_bottom_age"
        app:layout_constraintTop_toBottomOf="@id/missing_bottom_age" />

    <TextView
        android:id="@+id/missing_bottom_missingPlace_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:textAppearance="@style/TogetherPetTextSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/missing_bottom_age" />

    <TextView
        android:id="@+id/missing_bottom_addInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing_bottom_addInfo"
        android:textAppearance="@style/TogetherPetTextHeadingLarge"
        app:layout_constraintStart_toStartOf="@id/missing_bottom_missingPlace"
        app:layout_constraintTop_toBottomOf="@id/missing_bottom_missingPlace" />

    <TextView
        android:id="@+id/missing_bottom_addInfo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TogetherPetTextSmall"
        app:layout_constraintStart_toStartOf="@id/missing_bottom_addInfo"
        app:layout_constraintTop_toBottomOf="@id/missing_bottom_addInfo" />

    <TextView
        android:id="@+id/myPet_missingRegister_button"
        android:layout_width="296dp"
        android:layout_height="46dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/report_btn"
        android:drawableStart="@drawable/sos_icon_resize_30"
        android:drawablePadding="-30dp"
        android:elevation="8dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingStart="10dp"
        android:text="@string/missing_bottom_report_btn"
        android:textAppearance="@style/TogetherPetText20"
        app:layout_constraintTop_toBottomOf="@id/missing_bottom_addInfo"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>